# memogen-ielts-flashcards

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  GITHUB_PAGES_FIX.md  LICENSE  Makefile  README.md  index.html  package.json  pyproject.toml  run_all_tests.sh  test-local.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/memogen/: __init__.py  cli.py  models.py  server.py
tests/: __init__.py  conftest.py  test_cli.py  test_models.py
