[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memogen"
version = "1.0.0"
description = "🎴 MEMOGEN - Master IELTS Vocabulary with 3D Interactive Flashcards"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = [
    "ielts",
    "vocabulary",
    "flashcards",
    "english-learning",
    "language-learning",
    "education",
    "edtech",
    "web-app",
]
authors = [
    { name = "MEMOGEN Team", email = "contact@memogen.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.3",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "httpx>=0.26.0",
    "coverage[toml]>=7.4.0",

    # Linting & Formatting
    "ruff>=0.2.0",
    "black>=24.1.0",
    "isort>=5.13.0",

    # Type Checking
    "mypy>=1.8.0",
    "types-setuptools",

    # Security
    "bandit[toml]>=1.7.6",
    "pip-audit>=2.7.0",
    "safety>=3.0.0",

    # Pre-commit
    "pre-commit>=3.6.0",

    # Package Management
    "uv>=0.1.0",  # Fast Python package installer

    # Development
    "ipython>=8.20.0",
    "ipdb>=0.13.13",
]

ai = [
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "langchain>=0.1.6",
    "langchain-openai>=0.0.5",
]

all = [
    "memogen[dev,ai]",
]

[project.urls]
Homepage = "https://github.com/umitkacar/MEMOGEN"
Documentation = "https://github.com/umitkacar/MEMOGEN#readme"
Repository = "https://github.com/umitkacar/MEMOGEN.git"
"Bug Tracker" = "https://github.com/umitkacar/MEMOGEN/issues"

[project.scripts]
memogen = "memogen.cli:main"

# ==============================================================================
# HATCH CONFIGURATION
# ==============================================================================

[tool.hatch.version]
path = "src/memogen/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/memogen"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=memogen --cov-report=term-missing --cov-report=html {args:tests}"
cov-report = "python -m http.server 8000 -d htmlcov"

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "ruff>=0.2.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
]

[tool.hatch.envs.lint.scripts]
check = [
    "ruff check .",
    "black --check .",
    "mypy .",
]
format = [
    "black .",
    "ruff check --fix .",
]
all = [
    "format",
    "check",
]

# ==============================================================================
# RUFF CONFIGURATION
# ==============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

src = ["src", "tests"]
exclude = [
    ".git",
    ".hatch",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "TRY",    # tryceratops
    "NPY",    # numpy-specific rules
    "RUF",    # ruff-specific rules
]

ignore = [
    "E501",    # line too long (handled by black)
    "S101",    # assert usage (ok in tests)
    "PLR0913", # too many arguments
    "COM812",  # trailing comma (conflicts with formatter)
    "ISC001",  # implicit string concat (conflicts with formatter)
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "PLR2004", "ARG"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["memogen"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ==============================================================================
# BLACK CONFIGURATION
# ==============================================================================

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hatch
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | __pycache__
  | build
  | dist
  | node_modules
)/
'''

# ==============================================================================
# MYPY CONFIGURATION
# ==============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_equality = true
extra_checks = true
show_error_codes = true
show_column_numbers = true
pretty = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ==============================================================================
# PYTEST CONFIGURATION
# ==============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    # Uncomment below after installing pytest-xdist
    # "-n", "auto",  # pytest-xdist: auto-detect number of CPUs
    # "--maxprocesses=4",  # Limit max parallel processes
    # "--dist=loadscope",  # Distribute tests by scope
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

# ==============================================================================
# COVERAGE CONFIGURATION
# ==============================================================================

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ==============================================================================
# ISORT CONFIGURATION
# ==============================================================================

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
skip_gitignore = true
known_first_party = ["memogen"]
